--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-swipeable-bottom-sheet",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/vue-swipeable-bottom-sheet.js",
   "scripts": {
     "build": "webpack --progress --hide-modules",
     "dev": "webpack-dev-server --config ./webpack.example.config.js --inline --hot",
@@ -15,7 +15,8 @@
   "keywords": [
     "vue",
     "vuejs",
-    "component"
+    "component",
+    "swipeable"
   ],
   "author": "atsutopia",
   "license": "MIT",
@@ -28,6 +29,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -36,13 +38,13 @@
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.20.3",
     "vue": "2.5.16",
     "vue-loader": "^14.2.2",
     "vue-template-compiler": "2.5.16",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
-    "sass-loader": "^7.1.0",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
